# pymedia

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  install.sh  pyproject.toml  setup.py  strip-wheel.sh
.github/workflows/: ci.yaml  publish.yml  test.yml
docs/: README.md  analysis.md  audio.md  development.md  features.md  frames.md  index.md  info.md  installation.md  metadata.md  streaming.md  subtitles.md  video.md
src/pymedia/: __init__.py  _core.py  analysis.py  audio.py  frames.py  info.py  metadata.py  streaming.py  subtitles.py  transforms.py  video.py
src/pymedia/_lib/: pymedia.c
src/pymedia/_lib/modules/: README.md  audio.c  filters.c  metadata.c  streaming.c  subtitles_tracks.c  transforms.c  video_core.c  video_effects.c
tests/: conftest.py  test_audio.py  test_audio_volume.py  test_frames.py  test_metadata.py  test_streaming_analysis.py  test_subtitles_analysis.py  test_transforms.py  test_video.py  test_video_effects.py
