[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "python-media"
version = "0.2.4"
description = "In-memory video processing library powered by FFmpeg"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["video", "audio", "ffmpeg", "extract", "convert", "compress", "gif", "media"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Multimedia :: Sound/Audio :: Conversion"
]

[project.urls]
Homepage = "https://github.com/moinakmalkhan/pymedia"
Repository = "https://github.com/moinakmalkhan/pymedia"
Issues = "https://github.com/moinakmalkhan/pymedia/issues"

[tool.setuptools.packages.find]
where = ["src"]

# ── black ──────────────────────────────────────────────────────────────────────

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312", "py313"]

# ── isort ─────────────────────────────────────────────────────────────────────

[tool.isort]
profile = "black"
line_length = 100

# ── flake8 (via Flake8-pyproject or .flake8 file) ─────────────────────────────
# flake8 doesn't read pyproject.toml natively; config lives in setup.cfg or .flake8

# ── pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]

# ── cibuildwheel ──────────────────────────────────────────────────────────────

[tool.cibuildwheel]
# Build for Python 3.9–3.13 on all platforms
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
# Skip 32-bit and musl (Alpine) — FFmpeg dev libs not reliably available
skip = "*-musllinux* *-manylinux_i686 *-win32"
# Run full test suite against each built wheel in a matching interpreter.
test-requires = ["pytest"]
test-command = "pytest -q {project}/tests"

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
# manylinux_2_28 is AlmaLinux 8 — install FFmpeg dev libs from RPM Fusion
before-all = """
dnf install -y epel-release
dnf install -y https://mirrors.rpmfusion.org/free/el/rpmfusion-free-release-8.noarch.rpm
dnf install -y ffmpeg-devel gcc pkg-config zip patchelf
"""
# auditwheel bundles all FFmpeg .so files into the wheel
repair-wheel-command = "bash /project/strip-wheel.sh {wheel} {dest_dir}"

[tool.cibuildwheel.macos]
archs = ["native"]
before-all = "brew install ffmpeg pkg-config"
# DYLD_LIBRARY_PATH is set inline in repair-wheel-command because cibuildwheel's
# `environment` key only applies to the build step, not to repair-wheel-command.
# brew --prefix resolves to /opt/homebrew on arm64 and /usr/local on x86_64.
repair-wheel-command = "DYLD_LIBRARY_PATH=$(brew --prefix)/lib delocate-wheel -w {dest_dir} -v {wheel}"

[tool.cibuildwheel.windows]
before-all = "python -m pip install delvewheel"
# Ensure FFmpeg DLLs are bundled into the wheel so users don't need a separate FFmpeg install.
repair-wheel-command = "delvewheel repair --add-path \"%FFMPEG_ROOT%\\\\bin\" -w {dest_dir} {wheel}"

[tool.cibuildwheel.windows.environment]
FFMPEG_ROOT = "C:\\\\ffmpeg"
